examples/12.helm/1.deploy-wordpress/1.wp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
    rules:
    - host: happyit.test
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: happy-panda-wordpress
              port: 
                number: 80
